// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component 1`] = `
<RCTScrollView
  ItemSeparatorComponent={null}
  data={
    [
      {
        "id": 42,
      },
      {
        "id": 43,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        collapsable={false}
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text>
          42
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        43
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`should use defaults 1`] = `
<RCTScrollView
  ItemSeparatorComponent={null}
  data={
    [
      {
        "id": 42,
      },
      {
        "id": 43,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        collapsable={false}
        style={
          {
            "opacity": 0.044,
          }
        }
      >
        <Text>
          42
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        collapsable={false}
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text>
          43
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`uses separator 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    [
      {
        "id": 42,
      },
      {
        "id": 43,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        collapsable={false}
        style={
          {
            "opacity": 0,
          }
        }
      >
        <Text>
          42
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        43
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
